; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/port/extr_posix_sema.c_PGReserveSemaphores.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/port/extr_posix_sema.c_PGReserveSemaphores.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stat = type { i32 }

@DataDir = common dso_local global i32 0, align 4
@FATAL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [39 x i8] c"could not stat data directory \22%s\22: %m\00", align 1
@sharedSemas = common dso_local global i64 0, align 8
@numSems = common dso_local global i64 0, align 8
@maxSems = common dso_local global i32 0, align 4
@nextSemKey = common dso_local global i32 0, align 4
@ReleaseSemaphores = common dso_local global i32 0, align 4
@PANIC = common dso_local global i32 0, align 4
@mySemPointers = common dso_local global i32** null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @PGReserveSemaphores(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.stat, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* @DataDir, align 4
  %5 = call i64 @stat(i32 %4, %struct.stat* %3)
  %6 = icmp slt i64 %5, 0
  br i1 %6, label %7, label %13

7:                                                ; preds = %1
  %8 = load i32, i32* @FATAL, align 4
  %9 = call i32 (...) @errcode_for_file_access()
  %10 = load i32, i32* @DataDir, align 4
  %11 = call i32 @errmsg(i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str, i64 0, i64 0), i32 %10)
  %12 = call i32 @ereport(i32 %8, i32 %11)
  br label %13

13:                                               ; preds = %7, %1
  %14 = load i32, i32* %2, align 4
  %15 = call i32 @PGSemaphoreShmemSize(i32 %14)
  %16 = call i64 @ShmemAllocUnlocked(i32 %15)
  store i64 %16, i64* @sharedSemas, align 8
  store i64 0, i64* @numSems, align 8
  %17 = load i32, i32* %2, align 4
  store i32 %17, i32* @maxSems, align 4
  %18 = getelementptr inbounds %struct.stat, %struct.stat* %3, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  store i32 %19, i32* @nextSemKey, align 4
  %20 = load i32, i32* @ReleaseSemaphores, align 4
  %21 = call i32 @on_shmem_exit(i32 %20, i32 0)
  ret void
}

declare dso_local i64 @stat(i32, %struct.stat*) #1

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errcode_for_file_access(...) #1

declare dso_local i32 @errmsg(i8*, i32) #1

declare dso_local i64 @ShmemAllocUnlocked(i32) #1

declare dso_local i32 @PGSemaphoreShmemSize(i32) #1

declare dso_local i32 @on_shmem_exit(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
